api doc fix
